# ACMTOrderBook

./: .gitignore  README.md  cpp-orderbook-performance.md  dashboard.py
cpp/: main.cpp
cpp v1/: CMakeLists.txt  main.cpp
cpp v1/behave/: axob.h  axob_cage.cpp  axob_init.cpp  axob_order.cpp  axob_snap.cpp  axob_trade.cpp  ob_types.h
cpp v1/tool/: axsbe_order.h  msg_util.h
cpp v2/: CMakeLists.txt  CMakePresets.json  build.bat  cmake_out.txt  main.cpp  test_mmap.cpp
cpp v2/behave/: axob.h  axob_cage.cpp  axob_init.cpp  axob_order.cpp  axob_snap.cpp  axob_trade.cpp  ob_types.h
cpp v2/benchmark/: build.bat  build_benchmark.bat  compile_and_run.bat  compile_ankerl.bat  hashmap_benchmark.cpp  hashmap_benchmark_simple.cpp  run_bench.bat  run_benchmark.bat  simd_test.cpp  test_ankerl.cpp
cpp v2/core/: cache_line.h  compile_test.cpp  cpu_affinity.h  huge_pages.h  latency_stats.h  memory_pool.h  spsc_queue.h
cpp v2/pipeline/: consumer.cpp  consumer.cpp.tmp2  consumer.h  consumer_new.cpp  event.h  msg_buffer.h  pipeline.cpp  pipeline.h  producer.cpp  producer.h
cpp v2/scripts/: benchmark_pgo.bat  build_pgo.bat
cpp v2/tool/: axsbe_base.h  axsbe_exe.h  axsbe_order.h  axsbe_snap_stock.h  field_parser.h  mmap_file.h  msg_util.cpp  msg_util.h  simd_util.h
cpp/behave/: axob.h  axob_cage.cpp  axob_init.cpp  axob_order.cpp  axob_snap.cpp  axob_trade.cpp  ob_types.h
cpp/tool/: axsbe_base.h  axsbe_exe.h  axsbe_order.h  axsbe_snap_stock.h
doc/cpp/: cpp-orderbook-performance.md  plan.md  plot_throughput.py  throughput-chart.md  v2.1-msvc-optimization.md  v2.2-full-profile.md  v2.2-hashmap-benchmark.md  v2.2-ke2-build-infra.md  v2.2-ordermap-profile.md  v2.3-code-refactoring.md  v2.3-direct-parsing-optimization.md  v2.3-queue-sync-profile.md  v2.4-code-quality.md  v2.5-pgo-optimization.md  v2.5-pgo-overview.md  v2.5-pgo-report.md  v2.5-pgo-summary.md  v2.5-pgo-troubleshooting.md  v2.5-pgo-workflow.md  v2.6-zero-alloc-parsing.md  v2.7-component-overhead.md  v2.8-forward-strstr.md
py/: main.py  run_000001_test.py  run_progress.py
py/behave/: axob.py
